fix page jump

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -59,58 +59,108 @@
 
 .form {
     width: 100%;
-    background-color: #f6f6f6;
-    padding: 80px;
+    background-color: colors(gray);
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include mq(pc) {
+        padding: 4rem;
+    }
+
+    @include mq(sp) {
+        padding: 4rem 1.6rem;
+    }
 }
 
 .form_content_item {
     width: 100%;
-    height: 98px;
-    max-width: 1200px;
     display: flex;
-    align-items: center;
-    padding-left: 24px;
-    padding-right: 24px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+    @include mq(pc) {
+        align-items: center;
+        height: 8rem;
+        max-width: 1200px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    @include mq(sp) {
+        flex-direction: column;
+        max-width: 400px;
+        padding: 1.6rem;
+    }
 }
 
 .form_content_text {
     display: flex;
     align-items: center;
-    width: 332px;
+
+    @include mq(pc) {
+        width: 332px;
+    }
+
+    @include mq(sp) {}
 }
 
 .form_content_titles {
     font-weight: 500;
-    font-size: 20px;
-    padding-right: 24px;
-    min-width: 165px;
+
+    @include mq(pc) {
+        min-width: 165px;
+        font-size: 16px;
+        padding-right: 24px;
+    }
+
+    @include mq(sp) {
+        font-size: 16px;
+        padding-right: 16px;
+    }
 }
 
 .chips {
-    color: #fff;
-    min-width: 60px;
-    height: 32px;
-    font-weight: 500;
-    font-size: 14px;
-    margin-left: auto;
-    background-color: #4654a3;
-    border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 500;
+    background-color: #4654a3;
+    border-radius: 100px;
+    color: #fff;
+
+    @include mq(pc) {
+        min-width: 56px;
+        height: 26px;
+        font-size: 14px;
+        margin-left: auto;
+    }
+
+    @include mq(sp) {
+        min-width: 48px;
+        height: 24px;
+        font-size: 12px;
+    }
 }
 
 .form_input {
-    width: 343px;
-    height: 50px;
-    margin-left: 60px;
     background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    outline: none;
+    border: .1rem solid colors(black_38);
+
+    @include mq(pc) {
+        width: 343px;
+        height: 48px;
+        padding: .8rem;
+        margin-left: 60px;
+    }
+
+    @include mq(sp) {
+        width: 100%;
+        height: 40px;
+        padding: .4rem;
+        margin-top: .8rem;
+    }
 }
 
 .input {
@@ -118,121 +168,102 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-}
-
-.form_content_title {
-    width: 1200px;
-    height: 98px;
-    display: flex;
-    align-items: center;
-    padding-left: 24px;
+    border: none;
 }
 
 .form_content_input {
     width: 100%;
-    max-width: 1200px;
     display: flex;
-    padding-left: 24px;
-    padding-right: 24px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+    @include mq(pc) {
+        max-width: 1200px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    @include mq(sp) {
+        flex-direction: column;
+        max-width: 400px;
+        padding: 1.6rem;
+    }
 }
 
 .input_title {
-    /* min-width: 392px; */
-    width: 332px;
-    height: 38px;
     font-weight: 500;
-    font-size: 20px;
-    margin-top: 30px;
-    padding-right: 24px;
+    font-size: 16px;
+
+    @include mq(pc) {
+        width: 332px;
+        margin-top: 30px;
+        padding-right: 24px;
+    }
 }
 
 .input_form {
-    /* min-width: 343px;
-    min-height: 200px; */
-    margin-top: 24px;
-    margin-bottom: 24px;
-    margin-left: 60px;
-    width: 343px;
-    max-width: 343px;
     border-radius: 4px;
     resize: vertical;
+    border: .1rem solid colors(black_38);
+
+    @include mq(pc) {
+        width: 343px;
+        max-width: 343px;
+        margin-top: 24px;
+        margin-bottom: 24px;
+        margin-left: 60px;
+    }
+
+    @include mq(sp) {
+        width: 100%;
+        margin-top: .8rem;
+    }
 }
 
 .send_button {
-    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-color: #2F80ED;
+    background-color: colors(main_2);
     border-radius: 100px;
     font-weight: 400;
-    font-size: 24px;
-    padding-left: 32px;
-    padding-right: 32px;
-    margin-top: 64px;
     border: none;
+
+    &:hover {
+        opacity: .7;
+    }
+
+    @include mq(pc) {
+        height: 60px;
+        font-size: 20px;
+        padding-left: 24px;
+        padding-right: 24px;
+        margin-top: 40px;
+    }
+
+    @include mq(sp) {
+        height: 48px;
+        font-size: 16px;
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-top: 24px;
+    }
 }
 
 .mail_icon {
-    width: 24px;
-    height: 24px;
-    font-size: 24px;
-    margin-right: 16px;
+
+    @include mq(pc) {
+        width: 20px;
+        height: 20px;
+        font-size: 20px;
+        margin-right: 16px;
+    }
+
+    @include mq(sp) {
+        width: 16px;
+        height: 16px;
+        font-size: 16px;
+        margin-right: 8px;
+    }
 }
-
-/* .footer {
-    padding: 4rem;
-    background-color: colors(footer_bg);
-
-    .footer_upper_part {
-        display: flex;
-        align-items: center;
-        max-width: 128rem;
-        margin-right: auto;
-        margin-left: auto;
-    }
-
-    .footer_img_wrapper {
-        width: 20rem;
-    }
-
-    .footer_img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .footer_navi {
-        display: flex;
-        align-items: center;
-        gap: 7.2rem;
-        margin-left: auto;
-    }
-
-    .footer_navi_item {
-        font-size: px_vw(20px);
-        color: colors(white);
-    }
-
-    .footer_lower_part {
-        display: flex;
-        align-items: flex-end;
-        max-width: 128rem;
-        margin-top: 6rem;
-        margin-right: auto;
-        margin-left: auto;
-    }
-
-    .footer_address {
-        font-size: px_vw(20px);
-        color: colors(white);
-    }
-
-    .footer_company {
-        margin-left: auto;
-        font-size: px_vw(20px);
-        color: colors(white);
-    }
-} */
