--- a/src/scss/service.scss
+++ b/src/scss/service.scss
@@ -92,6 +92,7 @@
         display: flex;
         justify-content: center;
         background-color: colors(white);
+        position: relative;
 
         @include mq(pc) {
             &:nth-child(2n) {
@@ -178,5 +179,17 @@
         width: 100%;
         height: 100%;
         vertical-align: bottom;
+    }
+}
+
+.page_jump {
+    position: absolute;
+
+    @include mq(pc) {
+        top: -8rem;
+    }
+
+    @include mq(sp) {
+        top: -4.8rem;
     }
 }
